crates/structurizr-grammar/tests/snapshots/fixtures__fixture@deployment__no_relationship_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (identifiers_directive value:
        (identifier))
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (container identifier:
                (identifier) name:
                (string) description:
                (string) technology:
                (string))
              (container identifier:
                (identifier) name:
                (string) description:
                (string) technology:
                (string) tags:
                (identifier))
              (relationship operator:
                (relationship_operator) destination:
                (identifier) attribute:
                (string) attribute:
                (string))))
          (deployment_environment identifier:
            (identifier) name:
            (string) body:
            (deployment_environment_block
              (deployment_node name:
                (string) body:
                (deployment_node_block
                  (deployment_node name:
                    (string) body:
                    (deployment_node_block
                      (instance_of target:
                        (identifier))))
                  (instance_of target:
                    (identifier))))))
          (deployment_environment identifier:
            (identifier) name:
            (string) body:
            (deployment_environment_block
              (deployment_node identifier:
                (identifier) name:
                (string) body:
                (deployment_node_block
                  (deployment_node identifier:
                    (identifier) name:
                    (string) body:
                    (deployment_node_block
                      (instance_of identifier:
                        (identifier) target:
                        (identifier))))))
              (deployment_node identifier:
                (identifier) name:
                (string) body:
                (deployment_node_block
                  (infrastructure_node identifier:
                    (identifier) name:
                    (string))
                  (deployment_node identifier:
                    (identifier) name:
                    (string) body:
                    (deployment_node_block
                      (instance_of identifier:
                        (identifier) target:
                        (identifier))))))
              (relationship source:
                (identifier) operator:
                (relationship_operator) destination:
                (identifier) body:
                (relationship_block
                  (nested_relationship source:
                    (identifier) operator:
                    (relationship_operator) destination:
                    (identifier))
                  (nested_relationship source:
                    (identifier) operator:
                    (relationship_operator) destination:
                    (identifier) attribute:
                    (string) attribute:
                    (string)))))))))))
